--- a/menu.css
+++ b/menu.css
@@ -16,7 +16,7 @@ nav li{
 nav li a{
   border-right: 1px solid #78b1ed;
   color: #78b1ed;
-  padding: 12px 55px;
+  padding: 12px 54.90px;
   display: block;
 }
 a:hover{
@@ -27,7 +27,7 @@ a:hover{
 nav .burger a{
   background-color: #46a1fe;
   color: white;
-  padding: 12px 26px;
+  padding: 12px 27px;
 }
 .burger{
   float: right;
@@ -38,6 +38,18 @@ nav .burger a{
   height: 3px;
   display: block;
   margin: 2px;
+}
+.burger::before{
+  content: "6";
+  border: 2px solid white;
+  border-radius: 100%;
+  color: white;
+  background-color: #46a1fe;
+  position: absolute;
+  padding: 6px 10px;
+  text-align: center;
+  top: 23px;
+  left: 1491px;
 
 
 }
