--- a/menu.css
+++ b/menu.css
@@ -31,6 +31,7 @@ nav .burger a{
 }
 .burger{
   float: right;
+  display: none;
 }
 .burger span{
   background-color: white;
@@ -39,7 +40,7 @@ nav .burger a{
   display: block;
   margin: 2px;
 }
-.burger::before{
+nav .burger a::before{
   content: "6";
   border: 2px solid white;
   border-radius: 100%;
@@ -50,6 +51,18 @@ nav .burger a{
   text-align: center;
   top: 23px;
   left: 1491px;
+}
 
+/*mobile styles*/
+
+@media screen and (max-width:800px) {
+  nav .burger{
+    display: block;
+  }
+nav li:nth-child(9),
+nav li:nth-child(8),
+nav li:nth-child(7){
+  display: none;
+}
 
 }
