--- a/menu.css
+++ b/menu.css
@@ -40,29 +40,125 @@ nav .burger a{
   display: block;
   margin: 2px;
 }
-nav .burger a::before{
-  content: "6";
+nav .burger::before{
+  content: "0";
   border: 2px solid white;
   border-radius: 100%;
   color: white;
   background-color: #46a1fe;
-  position: absolute;
   padding: 6px 10px;
   text-align: center;
+  position: absolute;
   top: 23px;
-  left: 1491px;
+  left: 1492px;
 }
 
 /*mobile styles*/
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:2000px) {
   nav .burger{
     display: block;
-  }
-nav li:nth-child(9),
-nav li:nth-child(8),
-nav li:nth-child(7){
+  } }
+  @media screen and (max-width:1600px) {
+    li.burger::before{
+      content: "1";
+        text-align: center;
+        display: block;
+    }
+    }
+  @media screen and (max-width:1600px){
+nav li:nth-child(9){
   display: none;
 }
 
 }
+@media screen and (max-width:1456px){
+nav li:nth-child(8){
+display: none;
+}
+}
+@media screen and (max-width:1456px) {
+  li.burger::before{
+    content: "2";
+    text-align: center;
+    display: block;
+  }
+  }
+
+@media screen and (max-width:1246px){
+nav li:nth-child(7){
+display: none;
+}
+
+}
+@media screen and (max-width:1246px) {
+  li.burger::before{
+    content: "3";
+      text-align: center;
+  }
+  }
+@media screen and (max-width:1102px){
+nav li:nth-child(6){
+display: none;
+}
+
+}
+@media screen and (max-width:1102px) {
+  li.burger::before{
+    display: block;
+    content: "4";
+      text-align: center;
+  }
+  }
+@media screen and (max-width:930px){
+nav li:nth-child(5){
+display: none;
+}
+
+}
+@media screen and (max-width:930px) {
+  li.burger::before{
+    display: block;
+    content: "5";
+      text-align: center;
+  }
+  }
+@media screen and (max-width:779px){
+nav li:nth-child(4){
+display: none;
+}
+
+}
+@media screen and (max-width:779px) {
+  li.burger::before{
+    display: block;
+    content: "6";
+      text-align: center;
+  }
+  }
+@media screen and (max-width:600px){
+nav li:nth-child(3){
+display: none;
+}
+
+}
+@media screen and (max-width:600px) {
+  li.burger::before{
+    display: block;
+    content: "7";
+      text-align: center;
+  }
+  }
+@media screen and (max-width:410px){
+nav li:nth-child(2){
+display: none;
+}
+
+}
+@media screen and (max-width:410px) {
+  li.burger::before{
+    display: block;
+    content: "8";
+      text-align: center;
+  }
+  }
