--- a/menu.css
+++ b/menu.css
@@ -32,6 +32,7 @@ nav .burger a{
 .burger{
   float: right;
   display: none;
+  position: relative;
 }
 .burger span{
   background-color: white;
@@ -39,6 +40,7 @@ nav .burger a{
   height: 3px;
   display: block;
   margin: 2px;
+
 }
 nav .burger::before{
   content: "0";
@@ -49,8 +51,8 @@ nav .burger::before{
   padding: 6px 10px;
   text-align: center;
   position: absolute;
-  top: 23px;
-  left: 1492px;
+  top: 4px;
+  right: 54px;
 }
 
 /*mobile styles*/
